--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -40,6 +40,10 @@
 }
 
 @media screen and (max-width: 48em) {
+  /* .title {
+    font-size: 5rem;
+  } */
+
   .desc {
     align-items: flex-start;
     text-align: left;
