--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -40,9 +40,9 @@
 }
 
 @media screen and (max-width: 48em) {
-  /* .title {
+  .title {
     font-size: 5rem;
-  } */
+  }
 
   .desc {
     align-items: flex-start;
