--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -23,7 +23,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
   text-align: center;
   height: 100vh;
 }
@@ -40,8 +40,12 @@
 }
 
 @media screen and (max-width: 48em) {
+  .hero {
+    height: 100vh;
+  }
+
   .title {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   .desc {
