--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,10 @@
 .header {
-  background-color: #fdc280;
+  /* background-color: #fdc280; */
+  background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.07);
   font-size: 2rem;
   font-weight: 500;
-  height: 8vh;
+  height: 10vh;
   color: #023047;
   position: relative;
   top: 0;
@@ -13,7 +14,7 @@
 .navbar {
   max-width: 144rem;
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 2rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,8 +23,8 @@
 
 .logo img {
   display: block;
-  height: 15rem;
-  width: 15rem;
+  height: 8rem;
+  width: 17rem;
 }
 
 .listItems {
