--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -49,7 +49,7 @@
   border: none;
   cursor: pointer;
   padding: 1rem;
-  background-color: #fdc280;
+  background-color: #fff;
 }
 
 .mobileBtn i {
